--- a/style.css
+++ b/style.css
@@ -57,15 +57,36 @@ textarea {
   color: white;
 }
 
-.saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
-}
+/* STYLED INPUT FIELD TO TAKE UP ENTIRE ROW FOR COLOR UNIFORMITY */
+  input[type=text] {
+    width: 100%;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+  }
+  /* STYLING FOR TABLE */
+  .table-container {
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+  }
+  /* STYLING FOR EACH DATA CELL */
+  .td {
+    text-align: right;
+  }
+  /* SAVE BUTTON STYLING  */
+  button {
+    top: 50%;
+    background-color: turquoise;
+    border: none;
+    border-radius: 30px;
+    padding: 15px;
+    min-height: 30px;
+    min-width: 70px;
+  }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all 0.3s ease-in-out;
-}
+  button:hover {
+    background-color: grey;
+    transition: 0.7s;
+  }
